# cpctools

./: .buildinfo  .gitignore  .pylintrc  .readthedocs.yaml  About.html  Changelog.html  Changelog.md  Citation.html  Gro2HDF5.py  HDF5er.html  HDF5er.py  LICENSE  Readme.html  Readme.md  ReferenceMaker.html  SOAPMatrix.py  SOAPify.html  Tutorials.html  Utils.html  dhfat3049.reference  genindex.html  ico5083.reference  index.html  log.lammps  modules.html  objects.inv  py-modindex.html  pyproject.toml  pyproject.toml_old  readme_link.html  refSave.h5py  requirements.txt  search.html  searchindex.js  setup.py  th4116.reference  worker.py
.github/workflows/: black.yml  changelogEnforcer.yml  documentation.yml  documentationEnforcer.yml  mainPushWorkflow.yml  prepare-hatch.yml  pullRequestWorkflow.yml  release.yml  test.yml
Examples/: FileHandling.ipynb  LENS.ipynb  TimeAnalysis.ipynb  tempoSOAP.ipynb  timeSOAP.ipynb
HDF5er/: HDF5erUtils.py  ase2HDF5.py
ReferenceMaker/: Masks_Ico5083.py  Masks_dhfat3049.py  Masks_th4116.py  __init__.py  __main__.py  dhfat3049.py  distanceVisualizer.py  ico5083.py  npExamples.py  referenceSaponificator.py  th4116.py
SOAPify/: SOAPClassify.py  SOAPbase.py  Saponify.py  __init__.py  metrics.py
_modules/: index.html
_modules/HDF5er/: HDF5To.html  HDF5erUtils.html  ToHDF5.html
_modules/ReferenceMaker/: distanceVisualizer.html  printNPExamples.html  referenceSaponificator.html
_modules/SOAPify/: SOAPClassify.html  SOAPbase.html  SOAPengine.html  Saponify.html  classify.html  distances.html  engine.html  saponify.html  transitions.html  utils.html
_modules/SOAPify/HDF5er/: HDF5To.html  HDF5erUtils.html  ToHDF5.html
_modules/SOAPify/transitions/: tracker.html
_sources/: About.rst.txt  Changelog.md.txt  Citation.rst.txt  HDF5er.rst.txt  Readme.md.txt  ReferenceMaker.rst.txt  Utils.rst.txt  index.rst.txt  modules.rst.txt
_static/: documentation_options.js
docs/: .gitignore  Makefile  requirements.txt
docs/source/: About.rst  Citation.rst  Examples.rst  FileHandling.ipynb  HDF5er.rst  LENS.ipynb  ReferenceMaker.rst  SOAPify.rst  TimeAnalysis.ipynb  Tutorials.rst  conf.py  images  index.rst  matplolibrc  modules.rst  readme_link.rst  tempoSOAP.ipynb  timeSOAP.ipynb
src/HDF5er/: HDF5To.py  HDF5erUtils.py  MDA2HDF5.py  ToHDF5.py  __init__.py  ase2HDF5.py
src/ReferenceMaker/: __main__.py  dhfat3049.py  distanceVisualizer.py  printNPExamples.py  referenceSaponificator.py  th4116.py
src/SOAPify/: SOAPClassify.py  SOAPTransitions.py  SOAPbase.py  SOAPengine.py  Saponify.py  __init__.py  analysis.py  classify.py  cli.py  distances.py  engine.py  saponify.py  transitions.py  utils.py
src/SOAPify/HDF5er/: HDF5To.py  HDF5erUtils.py  ToHDF5.py  __init__.py
src/SOAPify/transitions/: __init__.py  tracker.py
test/: testSupport.py  test_HD5Fer.py  test_HDFer.py  test_SOAPify.py  test_SOAPifySOAP.py  test_SOAPifyquippy.py
tests/: conftest.py  testSupport.py  test_HD5Fer.py  test_HDF5er.py  test_HDF5ertools.py  test_SOAPify.py  test_SOAPifyEngine.py  test_SOAPifySOAP.py  test_SOAPifyquippy.py  test_analysis.py  test_classification.py  test_tools.py  test_tracker.py  test_transitions.py
tests/test_transitions/: test_tracker.py  test_transitions.py
